fixed footer and row-contact p alignment

--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  /* border: 2px solid white; */
+  border: 2px solid white;
   color: aliceblue;
   font-family: "Poppins", system-ui, -apple-system, BlinkMacSystemFont,
     "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
@@ -190,15 +190,18 @@ section {
   list-style: none;
   font-size: 24px;
 }
+.row-contact p {
+  text-align: center;
+  margin: 20px auto;
+}
+main {
+  flex: 1;
+}
 
 footer {
-  background-color: var(--background-color);
-  color: var(--white);
+  margin-top: auto;
+  position: static;
   text-align: center;
-  padding: 20px;
-  position: relative;
-  bottom: 0;
-  width: 100%;
 }
 
 @media screen and (max-width: 1024px) {
